styling.css
/* Structural CSS */

.button-container {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap; 
	justify-content: space-around;
	width: 75%;
    margin: auto;
}
.button-container > div {
    margin-right: 2em;
}
.task-container {
    display: flex;
    flex-direction: column;
	border-left: 0.25em solid #ccc;
	margin-bottom: 0.4em;
}
.task-container > div{
	margin-bottom: 0.35em;
}
.add-task-div{
	margin-bottom: 0.35em;
}
.task-content {
    display: flex;
	flex-direction: row;
    flex-wrap: nowrap; 
	justify-content: space-between;
}
.task-text {
	display:flex;
	flex-direction: row;
	align-items: center;
}
.task-text > *{
	margin-right: 1em;
}
.task-content > div {
    margin-right: 1em;
}
.task-buttons{
	display:flex;
	flex-direction: row;
	align-items: center;
}
.main-task-container {
    width: 50%;
    margin: auto;
}

.hidden{
	display:none;
}

.add-task-btn {
    margin-left: 2.25em;
}


.main-task-container > div > div {
    content: "";
    display: block;
    width: 100%;
	padding-bottom: 0.75em;
	padding-top: 0.75em;
	margin-bottom: 0.8em;
}

/* End of Structural CSS */

.edit-task-btn, .del-task-btn, .swap-button {
	width: 1.5em;
	height: 1.5em;
	background-color: transparent;
	border: 1px solid #ccc;
	cursor: pointer;
	font-size: 1.2em;
	transition: background-color 0.3s ease;
	display: flex;
  	justify-content: center;
  	align-items: center;
}
.edit-task-btn:hover, .del-task-btn:hover, .swap-button:hover {
	background-color: #eee;
}

.delete-primed{
	background-color:red;
	font-weight: bold;
}
.delete-primed:hover{
	background-color:#Af0000;
}

.task-text-input {
	width: 100%;
	border: none;
	border-right: 0.125em solid #ccc;
	background-color: transparent;
	padding: 0.2em 0.4em;
	font-size: 1.15em;
	color: inherit;
	outline: none;
	transition: background-color 0.3s ease;
	height: 2em;
  }

  
  
.task-text-input:hover,
.task-text-input:focus {
background-color: #f0f0f0;
}

.task-toggle {
	appearance: none;
	width: 100%;
	height: 100%;
	background-color: #f2f2f2;
	border: none;
	cursor: pointer;
  }
  
  .task-toggle:hover {
	background-color: #e6e6e6;
  }
  
  .task-toggle:checked {
	background-color: #cccccc;
  }
  
  
  

